baml_language/crates/baml_tests/snapshots/parser_speculative/baml_tests__parser_speculative__03_hir2.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===
function user.Ambiguous(input: string) -> string  [llm] {
  baml.llm.call_llm_function(GPT4, "Ambiguous", map { "input": input })
}
function user.Ambiguous$build_request(input: string) -> baml.http.Request  [expr] {
  baml.llm.build_request("Ambiguous", map { "input": input })
}
function user.Ambiguous$render_prompt(input: string) -> baml.llm.PromptAst  [expr] {
  baml.llm.render_prompt("Ambiguous", map { "input": input })
}
function user.AnotherLLM(input: string) -> string  [llm] {
  baml.llm.call_llm_function(null, "AnotherLLM", map { "input": input })
}
function user.AnotherLLM$build_request(input: string) -> baml.http.Request  [expr] {
  baml.llm.build_request("AnotherLLM", map { "input": input })
}
function user.AnotherLLM$render_prompt(input: string) -> baml.llm.PromptAst  [expr] {
  baml.llm.render_prompt("AnotherLLM", map { "input": input })
}
class user.JsonData {
  field1: int
  field2: int
}
function user.ProcessData(data: user.JsonData) -> string  [expr] {
  { let result = data.field1 Add data.field2; if (result Gt 100) { return "high" }; return "low" }
}
function user.ExtractData(text: string) -> user.JsonData  [llm] {
  baml.llm.call_llm_function(GPT4, "ExtractData", map { "text": text })
}
function user.ExtractData$build_request(text: string) -> baml.http.Request  [expr] {
  baml.llm.build_request("ExtractData", map { "text": text })
}
function user.ExtractData$render_prompt(text: string) -> baml.llm.PromptAst  [expr] {
  baml.llm.render_prompt("ExtractData", map { "text": text })
}
class user.Analysis {
  sentiment: string
  keywords: string[]
  score: float
}
function user.ChainedProcess(input: string) -> string  [llm] {
  baml.llm.call_llm_function(GPT4, "ChainedProcess", map { "input": input })
}
function user.ChainedProcess$build_request(input: string) -> baml.http.Request  [expr] {
  baml.llm.build_request("ChainedProcess", map { "input": input })
}
function user.ChainedProcess$render_prompt(input: string) -> baml.llm.PromptAst  [expr] {
  baml.llm.render_prompt("ChainedProcess", map { "input": input })
}
function user.LLMAnalyze(text: string) -> user.Analysis  [llm] {
  baml.llm.call_llm_function(GPT4, "LLMAnalyze", map { "text": text })
}
function user.LLMAnalyze$build_request(text: string) -> baml.http.Request  [expr] {
  baml.llm.build_request("LLMAnalyze", map { "text": text })
}
function user.LLMAnalyze$render_prompt(text: string) -> baml.llm.PromptAst  [expr] {
  baml.llm.render_prompt("LLMAnalyze", map { "text": text })
}
function user.ProcessAnalysis(analysis: user.Analysis) -> string  [expr] {
  { let score = analysis.score } if (score Gt 0.8) { return "Very positive: " Add analysis.sentiment } else if (score Gt 0.5) { return "Positive: " Add analysis.sentiment } else if (score Gt 0.2) { return "Neutral: " Add analysis.sentiment } else { return "Negative: " Add analysis.sentiment }
}
function user.SimpleCalc(a: int, b: int) -> int  [expr] {
  { return a Add b Mul 2 }
}
