baml_language/crates/baml_tests/snapshots/parser_speculative/baml_tests__parser_speculative__04_7_mir2.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== MIR2 ===
fn user.AnotherLLM$render_prompt(input: string) -> baml.llm.PromptAst {
    // Locals:
    let _0: baml.llm.PromptAst // _0 // return
    let _1: string // input // param
    let _2: map<string, unknown>

    bb0: {
        _2 = { const "input": copy _1 };
        _0 = call const fn baml.llm.render_prompt(const "AnotherLLM", copy _2) -> [bb1];
    }

    bb1: {
        goto -> bb2;
    }

    bb2: {
        return;
    }
}

fn user.Ambiguous$render_prompt(input: string) -> baml.llm.PromptAst {
    // Locals:
    let _0: baml.llm.PromptAst // _0 // return
    let _1: string // input // param
    let _2: map<string, unknown>

    bb0: {
        _2 = { const "input": copy _1 };
        _0 = call const fn baml.llm.render_prompt(const "Ambiguous", copy _2) -> [bb1];
    }

    bb1: {
        goto -> bb2;
    }

    bb2: {
        return;
    }
}

fn user.Ambiguous$build_request(input: string) -> baml.http.Request {
    // Locals:
    let _0: baml.http.Request // _0 // return
    let _1: string // input // param
    let _2: map<string, unknown>

    bb0: {
        _2 = { const "input": copy _1 };
        _0 = call const fn baml.llm.build_request(const "Ambiguous", copy _2) -> [bb1];
    }

    bb1: {
        goto -> bb2;
    }

    bb2: {
        return;
    }
}

fn user.Ambiguous(input: string) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: string // input // param
    let _2: map<string, unknown>

    bb0: {
        _2 = { const "input": copy _1 };
        _0 = call const fn baml.llm.call_llm_function(const null, const "Ambiguous", copy _2) -> [bb1];
    }

    bb1: {
        goto -> bb2;
    }

    bb2: {
        return;
    }
}

fn user.AnotherLLM(input: string) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: string // input // param
    let _2: map<string, unknown>

    bb0: {
        _2 = { const "input": copy _1 };
        _0 = call const fn baml.llm.call_llm_function(const null, const "AnotherLLM", copy _2) -> [bb1];
    }

    bb1: {
        goto -> bb2;
    }

    bb2: {
        return;
    }
}

fn user.AnotherLLM$build_request(input: string) -> baml.http.Request {
    // Locals:
    let _0: baml.http.Request // _0 // return
    let _1: string // input // param
    let _2: map<string, unknown>

    bb0: {
        _2 = { const "input": copy _1 };
        _0 = call const fn baml.llm.build_request(const "AnotherLLM", copy _2) -> [bb1];
    }

    bb1: {
        goto -> bb2;
    }

    bb2: {
        return;
    }
}

fn user.ProcessData(data: user.JsonData) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: user.JsonData // data // param
    let _2: int // result
    let _3: int
    let _4: int
    let _5: bool
    let _6: int

    bb0: {
        _3 = copy _1.0;
        _4 = copy _1.1;
        _2 = copy _3 + copy _4;
        _6 = copy _2;
        _5 = copy _6 > const 100_i64;
        branch copy _5 -> [bb3, bb1];
    }

    bb1: {
        goto -> bb2;
    }

    bb2: {
        _0 = const "low";
        goto -> bb4;
    }

    bb3: {
        _0 = const "high";
        goto -> bb4;
    }

    bb4: {
        return;
    }
}

fn user.ExtractData(text: string) -> user.JsonData {
    // Locals:
    let _0: user.JsonData // _0 // return
    let _1: string // text // param
    let _2: map<string, unknown>

    bb0: {
        _2 = { const "text": copy _1 };
        _0 = call const fn baml.llm.call_llm_function(const null, const "ExtractData", copy _2) -> [bb1];
    }

    bb1: {
        goto -> bb2;
    }

    bb2: {
        return;
    }
}

fn user.ExtractData$render_prompt(text: string) -> baml.llm.PromptAst {
    // Locals:
    let _0: baml.llm.PromptAst // _0 // return
    let _1: string // text // param
    let _2: map<string, unknown>

    bb0: {
        _2 = { const "text": copy _1 };
        _0 = call const fn baml.llm.render_prompt(const "ExtractData", copy _2) -> [bb1];
    }

    bb1: {
        goto -> bb2;
    }

    bb2: {
        return;
    }
}

fn user.ExtractData$build_request(text: string) -> baml.http.Request {
    // Locals:
    let _0: baml.http.Request // _0 // return
    let _1: string // text // param
    let _2: map<string, unknown>

    bb0: {
        _2 = { const "text": copy _1 };
        _0 = call const fn baml.llm.build_request(const "ExtractData", copy _2) -> [bb1];
    }

    bb1: {
        goto -> bb2;
    }

    bb2: {
        return;
    }
}

fn user.LLMAnalyze$build_request(text: string) -> baml.http.Request {
    // Locals:
    let _0: baml.http.Request // _0 // return
    let _1: string // text // param
    let _2: map<string, unknown>

    bb0: {
        _2 = { const "text": copy _1 };
        _0 = call const fn baml.llm.build_request(const "LLMAnalyze", copy _2) -> [bb1];
    }

    bb1: {
        goto -> bb2;
    }

    bb2: {
        return;
    }
}

fn user.ChainedProcess(input: string) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: string // input // param
    let _2: map<string, unknown>

    bb0: {
        _2 = { const "input": copy _1 };
        _0 = call const fn baml.llm.call_llm_function(const null, const "ChainedProcess", copy _2) -> [bb1];
    }

    bb1: {
        goto -> bb2;
    }

    bb2: {
        return;
    }
}

fn user.LLMAnalyze(text: string) -> user.Analysis {
    // Locals:
    let _0: user.Analysis // _0 // return
    let _1: string // text // param
    let _2: map<string, unknown>

    bb0: {
        _2 = { const "text": copy _1 };
        _0 = call const fn baml.llm.call_llm_function(const null, const "LLMAnalyze", copy _2) -> [bb1];
    }

    bb1: {
        goto -> bb2;
    }

    bb2: {
        return;
    }
}

fn user.ChainedProcess$render_prompt(input: string) -> baml.llm.PromptAst {
    // Locals:
    let _0: baml.llm.PromptAst // _0 // return
    let _1: string // input // param
    let _2: map<string, unknown>

    bb0: {
        _2 = { const "input": copy _1 };
        _0 = call const fn baml.llm.render_prompt(const "ChainedProcess", copy _2) -> [bb1];
    }

    bb1: {
        goto -> bb2;
    }

    bb2: {
        return;
    }
}

fn user.ProcessAnalysis(analysis: user.Analysis) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: user.Analysis // analysis // param
    let _2: float // score
    let _3: bool
    let _4: float
    let _5: string
    let _6: bool
    let _7: float
    let _8: string
    let _9: bool
    let _10: float
    let _11: string
    let _12: string

    bb0: {
        _2 = copy _1.2;
        _4 = copy _2;
        _3 = copy _4 > const 0.8_f64;
        branch copy _3 -> [bb6, bb1];
    }

    bb1: {
        _7 = copy _2;
        _6 = copy _7 > const 0.5_f64;
        branch copy _6 -> [bb5, bb2];
    }

    bb2: {
        _10 = copy _2;
        _9 = copy _10 > const 0.2_f64;
        branch copy _9 -> [bb4, bb3];
    }

    bb3: {
        _12 = copy _1.0;
        _0 = const "Negative: " + copy _12;
        goto -> bb7;
    }

    bb4: {
        _11 = copy _1.0;
        _0 = const "Neutral: " + copy _11;
        goto -> bb7;
    }

    bb5: {
        _8 = copy _1.0;
        _0 = const "Positive: " + copy _8;
        goto -> bb7;
    }

    bb6: {
        _5 = copy _1.0;
        _0 = const "Very positive: " + copy _5;
        goto -> bb7;
    }

    bb7: {
        return;
    }
}

fn user.ChainedProcess$build_request(input: string) -> baml.http.Request {
    // Locals:
    let _0: baml.http.Request // _0 // return
    let _1: string // input // param
    let _2: map<string, unknown>

    bb0: {
        _2 = { const "input": copy _1 };
        _0 = call const fn baml.llm.build_request(const "ChainedProcess", copy _2) -> [bb1];
    }

    bb1: {
        goto -> bb2;
    }

    bb2: {
        return;
    }
}

fn user.SimpleCalc(a: int, b: int) -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: int // a // param
    let _2: int // b // param
    let _3: int

    bb0: {
        _3 = copy _2 * const 2_i64;
        _0 = copy _1 + copy _3;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.LLMAnalyze$render_prompt(text: string) -> baml.llm.PromptAst {
    // Locals:
    let _0: baml.llm.PromptAst // _0 // return
    let _1: string // text // param
    let _2: map<string, unknown>

    bb0: {
        _2 = { const "text": copy _1 };
        _0 = call const fn baml.llm.render_prompt(const "LLMAnalyze", copy _2) -> [bb1];
    }

    bb1: {
        goto -> bb2;
    }

    bb2: {
        return;
    }
}
