baml_language/crates/baml_tests/snapshots/parser_speculative/baml_tests__parser_speculative__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
function user.Ambiguous(input: string) -> string throws never {
  baml.llm.call_llm_function<T>(GPT4, "Ambiguous", map { "input": input }) : string
  !! 89..220: unresolved name: GPT4
}
function user.Ambiguous$render_prompt(input: string) -> baml.llm.PromptAst throws never {
  baml.llm.render_prompt(GPT4, "Ambiguous", map { "input": input }) : baml.llm.PromptAst
  !! 0..220: unresolved name: GPT4
}
function user.Ambiguous$build_request(input: string) -> baml.http.Request throws never {
  baml.llm.build_request(GPT4, "Ambiguous", map { "input": input }) : baml.http.Request
  !! 0..220: unresolved name: GPT4
}
function user.Ambiguous$parse(json: string) -> string throws never {
  baml.llm.parse<T>("Ambiguous", json) : string
}
function user.AnotherLLM(input: string) -> string throws never {
  baml.llm.call_llm_function<T>(null, "AnotherLLM", map { "input": input }) : string
  !! 309..421: type mismatch: expected baml.llm.Client, got null
}
function user.AnotherLLM$render_prompt(input: string) -> baml.llm.PromptAst throws never {
  baml.llm.render_prompt(null, "AnotherLLM", map { "input": input }) : baml.llm.PromptAst
  !! 220..421: type mismatch: expected baml.llm.Client, got null
}
function user.AnotherLLM$build_request(input: string) -> baml.http.Request throws never {
  baml.llm.build_request(null, "AnotherLLM", map { "input": input }) : baml.http.Request
  !! 220..421: type mismatch: expected baml.llm.Client, got null
}
function user.AnotherLLM$parse(json: string) -> string throws never {
  baml.llm.parse<T>("AnotherLLM", json) : string
}
class user.JsonData {
  field1: int
  field2: int
}
function user.ProcessData(data: user.JsonData) -> string throws never {
  { : never
    let result = data.field1 + data.field2 : int
    if (result > 100 : bool) : void
      { : never
        return "high" : "high"
      }
    return "low" : "low"
  }
}
class user.JsonData$stream {
  field1: null | int
  field2: null | int
}
function user.ExtractData(text: string) -> user.JsonData throws never {
  baml.llm.call_llm_function<T>(GPT4, "ExtractData", map { "text": text }) : user.JsonData
  !! 46..146: unresolved name: GPT4
}
function user.ExtractData$render_prompt(text: string) -> baml.llm.PromptAst throws never {
  baml.llm.render_prompt(GPT4, "ExtractData", map { "text": text }) : baml.llm.PromptAst
  !! 0..146: unresolved name: GPT4
}
function user.ExtractData$build_request(text: string) -> baml.http.Request throws never {
  baml.llm.build_request(GPT4, "ExtractData", map { "text": text }) : baml.http.Request
  !! 0..146: unresolved name: GPT4
}
function user.ExtractData$parse(json: string) -> user.JsonData throws never {
  baml.llm.parse<T>("ExtractData", json) : user.JsonData
}
function user.LLMAnalyze(text: string) -> user.Analysis throws never {
  baml.llm.call_llm_function<T>(GPT4, "LLMAnalyze", map { "text": text }) : user.Analysis
  !! 96..242: unresolved name: GPT4
}
function user.LLMAnalyze$render_prompt(text: string) -> baml.llm.PromptAst throws never {
  baml.llm.render_prompt(GPT4, "LLMAnalyze", map { "text": text }) : baml.llm.PromptAst
  !! 0..242: unresolved name: GPT4
}
function user.LLMAnalyze$build_request(text: string) -> baml.http.Request throws never {
  baml.llm.build_request(GPT4, "LLMAnalyze", map { "text": text }) : baml.http.Request
  !! 0..242: unresolved name: GPT4
}
function user.LLMAnalyze$parse(json: string) -> user.Analysis throws never {
  baml.llm.parse<T>("LLMAnalyze", json) : user.Analysis
}
class user.Analysis {
  sentiment: string
  keywords: string[]
  score: float
}
function user.ProcessAnalysis(analysis: user.Analysis) -> string throws never {
  { : never
    let score = analysis.score : float
    if (score > 0.8 : bool) : never
      { : never
        return "Very positive: " + analysis.sentiment : string
      }
    else
      if (score > 0.5 : bool) : never
        { : never
          return "Positive: " + analysis.sentiment : string
        }
      else
        if (score > 0.2 : bool) : never
          { : never
            return "Neutral: " + analysis.sentiment : string
          }
        else
          { : never
            return "Negative: " + analysis.sentiment : string
          }
  }
}
function user.ChainedProcess(input: string) -> string throws never {
  baml.llm.call_llm_function<T>(GPT4, "ChainedProcess", map { "input": input }) : string
  !! 724..860: unresolved name: GPT4
}
function user.ChainedProcess$render_prompt(input: string) -> baml.llm.PromptAst throws never {
  baml.llm.render_prompt(GPT4, "ChainedProcess", map { "input": input }) : baml.llm.PromptAst
  !! 674..860: unresolved name: GPT4
}
function user.ChainedProcess$build_request(input: string) -> baml.http.Request throws never {
  baml.llm.build_request(GPT4, "ChainedProcess", map { "input": input }) : baml.http.Request
  !! 674..860: unresolved name: GPT4
}
function user.ChainedProcess$parse(json: string) -> string throws never {
  baml.llm.parse<T>("ChainedProcess", json) : string
}
function user.SimpleCalc(a: int, b: int) -> int throws never {
  { : never
    return a + b * 2 : int
  }
}
class user.Analysis$stream {
  sentiment: null | string
  keywords: string[]
  score: null | float
}
